meta-memfault/recipes-memfault/memfaultd/files/memfaultd/src/cli/memfault_core_handler/snapshots/memfaultd__cli__memfault_core_handler__core_transformer__test__transform@threads_32k.snap
---
source: memfaultd/src/cli/memfault_core_handler/core_transformer.rs
expression: segments
---
[
    (
        ProgramHeader {
            p_type: "PT_NOTE",
            p_flags: 0x0,
            p_offset: 0x660,
            p_vaddr: 0x0,
            p_paddr: 0x0,
            p_filesz: 0xdec,
            p_memsz: 0x0,
            p_align: 0,
        },
        Buffer(
            [],
        ),
    ),
    (
        ProgramHeader {
            p_type: "PT_LOAD",
            p_flags: 0x0,
            p_offset: 0x0,
            p_vaddr: 0x5587ae8bd000,
            p_paddr: 0x0,
            p_filesz: 0x39c,
            p_memsz: 0x39c,
            p_align: 8,
        },
        ProcessMemory,
    ),
    (
        ProgramHeader {
            p_type: "PT_LOAD",
            p_flags: 0x0,
            p_offset: 0x0,
            p_vaddr: 0x5587ae8c0dc0,
            p_paddr: 0x0,
            p_filesz: 0x200,
            p_memsz: 0x200,
            p_align: 8,
        },
        ProcessMemory,
    ),
    (
        ProgramHeader {
            p_type: "PT_LOAD",
            p_flags: 0x0,
            p_offset: 0x0,
            p_vaddr: 0x7f6e38cb4000,
            p_paddr: 0x0,
            p_filesz: 0x3b4,
            p_memsz: 0x3b4,
            p_align: 8,
        },
        ProcessMemory,
    ),
    (
        ProgramHeader {
            p_type: "PT_LOAD",
            p_flags: 0x0,
            p_offset: 0x0,
            p_vaddr: 0x7f6e38e99000,
            p_paddr: 0x0,
            p_filesz: 0x30c,
            p_memsz: 0x30c,
            p_align: 8,
        },
        ProcessMemory,
    ),
    (
        ProgramHeader {
            p_type: "PT_LOAD",
            p_flags: 0x0,
            p_offset: 0x0,
            p_vaddr: 0x7f6e38f781d0,
            p_paddr: 0x0,
            p_filesz: 0xc,
            p_memsz: 0xc,
            p_align: 8,
        },
        ProcessMemory,
    ),
    (
        ProgramHeader {
            p_type: "PT_LOAD",
            p_flags: 0x0,
            p_offset: 0x0,
            p_vaddr: 0x7f6e38f781e0,
            p_paddr: 0x0,
            p_filesz: 0x28,
            p_memsz: 0x28,
            p_align: 8,
        },
        ProcessMemory,
    ),
    (
        ProgramHeader {
            p_type: "PT_LOAD",
            p_flags: 0x0,
            p_offset: 0x0,
            p_vaddr: 0x7f6e38f78740,
            p_paddr: 0x0,
            p_filesz: 0x20,
            p_memsz: 0x20,
            p_align: 8,
        },
        ProcessMemory,
    ),
    (
        ProgramHeader {
            p_type: "PT_LOAD",
            p_flags: 0x0,
            p_offset: 0x0,
            p_vaddr: 0x7f6e38f78760,
            p_paddr: 0x0,
            p_filesz: 0x28,
            p_memsz: 0x28,
            p_align: 8,
        },
        ProcessMemory,
    ),
    (
        ProgramHeader {
            p_type: "PT_LOAD",
            p_flags: 0x0,
            p_offset: 0x0,
            p_vaddr: 0x7f6e38f7a000,
            p_paddr: 0x0,
            p_filesz: 0x25c,
            p_memsz: 0x25c,
            p_align: 8,
        },
        ProcessMemory,
    ),
    (
        ProgramHeader {
            p_type: "PT_LOAD",
            p_flags: 0x0,
            p_offset: 0x0,
            p_vaddr: 0x7f6e38facad0,
            p_paddr: 0x0,
            p_filesz: 0x28,
            p_memsz: 0x28,
            p_align: 8,
        },
        ProcessMemory,
    ),
    (
        ProgramHeader {
            p_type: "PT_LOAD",
            p_flags: 0x0,
            p_offset: 0x0,
            p_vaddr: 0x7f6e38fad118,
            p_paddr: 0x0,
            p_filesz: 0x28,
            p_memsz: 0x28,
            p_align: 8,
        },
        ProcessMemory,
    ),
    (
        ProgramHeader {
            p_type: "PT_LOAD",
            p_flags: 0x0,
            p_offset: 0x0,
            p_vaddr: 0x7f6e38fad2e0,
            p_paddr: 0x0,
            p_filesz: 0x28,
            p_memsz: 0x28,
            p_align: 8,
        },
        ProcessMemory,
    ),
    (
        ProgramHeader {
            p_type: "PT_LOAD",
            p_flags: 0x0,
            p_offset: 0x0,
            p_vaddr: 0x7f6e38fad8a0,
            p_paddr: 0x0,
            p_filesz: 0x1,
            p_memsz: 0x1,
            p_align: 8,
        },
        ProcessMemory,
    ),
    (
        ProgramHeader {
            p_type: "PT_LOAD",
            p_flags: 0x0,
            p_offset: 0x0,
            p_vaddr: 0x7f6e38fad8b0,
            p_paddr: 0x0,
            p_filesz: 0x28,
            p_memsz: 0x28,
            p_align: 8,
        },
        ProcessMemory,
    ),
    (
        ProgramHeader {
            p_type: "PT_LOAD",
            p_flags: 0x0,
            p_offset: 0x0,
            p_vaddr: 0x7ffe4ba7a3c0,
            p_paddr: 0x0,
            p_filesz: 0x1c40,
            p_memsz: 0x1c40,
            p_align: 8,
        },
        ProcessMemory,
    ),
    (
        ProgramHeader {
            p_type: "PT_LOAD",
            p_flags: 0x0,
            p_offset: 0x0,
            p_vaddr: 0x7ffe4bb1f000,
            p_paddr: 0x0,
            p_filesz: 0x554,
            p_memsz: 0x554,
            p_align: 8,
        },
        ProcessMemory,
    ),
    (
        ProgramHeader {
            p_type: "PT_NOTE",
            p_flags: 0x0,
            p_offset: 0x0,
            p_vaddr: 0x0,
            p_paddr: 0x0,
            p_filesz: 0xc8,
            p_memsz: 0x0,
            p_align: 0,
        },
        Buffer(
            [],
        ),
    ),
]
