meta-memfault/recipes-memfault/memfaultd/files/memfaultd/src/cli/memfault_core_handler/snapshots/memfaultd__cli__memfault_core_handler__core_transformer__test__transform@threads_32k_no_filter_support.snap
---
source: memfaultd/src/cli/memfault_core_handler/core_transformer.rs
expression: segments
---
[
    (
        ProgramHeader {
            p_type: "PT_NOTE",
            p_flags: 0x0,
            p_offset: 0x660,
            p_vaddr: 0x0,
            p_paddr: 0x0,
            p_filesz: 0xdec,
            p_memsz: 0x0,
            p_align: 0,
        },
        Buffer(
            [],
        ),
    ),
    (
        ProgramHeader {
            p_type: "PT_LOAD",
            p_flags: 0x4,
            p_offset: 0x2000,
            p_vaddr: 0x5587ae8bd000,
            p_paddr: 0x0,
            p_filesz: 0x1000,
            p_memsz: 0x1000,
            p_align: 4096,
        },
        ProcessMemory,
    ),
    (
        ProgramHeader {
            p_type: "PT_LOAD",
            p_flags: 0x5,
            p_offset: 0x3000,
            p_vaddr: 0x5587ae8be000,
            p_paddr: 0x0,
            p_filesz: 0x0,
            p_memsz: 0x1000,
            p_align: 4096,
        },
        ProcessMemory,
    ),
    (
        ProgramHeader {
            p_type: "PT_LOAD",
            p_flags: 0x4,
            p_offset: 0x3000,
            p_vaddr: 0x5587ae8bf000,
            p_paddr: 0x0,
            p_filesz: 0x0,
            p_memsz: 0x1000,
            p_align: 4096,
        },
        ProcessMemory,
    ),
    (
        ProgramHeader {
            p_type: "PT_LOAD",
            p_flags: 0x4,
            p_offset: 0x3000,
            p_vaddr: 0x5587ae8c0000,
            p_paddr: 0x0,
            p_filesz: 0x1000,
            p_memsz: 0x1000,
            p_align: 4096,
        },
        ProcessMemory,
    ),
    (
        ProgramHeader {
            p_type: "PT_LOAD",
            p_flags: 0x6,
            p_offset: 0x4000,
            p_vaddr: 0x5587ae8c1000,
            p_paddr: 0x0,
            p_filesz: 0x1000,
            p_memsz: 0x1000,
            p_align: 4096,
        },
        ProcessMemory,
    ),
    (
        ProgramHeader {
            p_type: "PT_LOAD",
            p_flags: 0x6,
            p_offset: 0x5000,
            p_vaddr: 0x7f6e38cb1000,
            p_paddr: 0x0,
            p_filesz: 0x3000,
            p_memsz: 0x3000,
            p_align: 4096,
        },
        ProcessMemory,
    ),
    (
        ProgramHeader {
            p_type: "PT_LOAD",
            p_flags: 0x4,
            p_offset: 0x8000,
            p_vaddr: 0x7f6e38cb4000,
            p_paddr: 0x0,
            p_filesz: 0x1000,
            p_memsz: 0x26000,
            p_align: 4096,
        },
        ProcessMemory,
    ),
    (
        ProgramHeader {
            p_type: "PT_LOAD",
            p_flags: 0x5,
            p_offset: 0x9000,
            p_vaddr: 0x7f6e38cda000,
            p_paddr: 0x0,
            p_filesz: 0x0,
            p_memsz: 0x155000,
            p_align: 4096,
        },
        ProcessMemory,
    ),
    (
        ProgramHeader {
            p_type: "PT_LOAD",
            p_flags: 0x4,
            p_offset: 0x9000,
            p_vaddr: 0x7f6e38e2f000,
            p_paddr: 0x0,
            p_filesz: 0x0,
            p_memsz: 0x53000,
            p_align: 4096,
        },
        ProcessMemory,
    ),
    (
        ProgramHeader {
            p_type: "PT_LOAD",
            p_flags: 0x4,
            p_offset: 0x9000,
            p_vaddr: 0x7f6e38e82000,
            p_paddr: 0x0,
            p_filesz: 0x4000,
            p_memsz: 0x4000,
            p_align: 4096,
        },
        ProcessMemory,
    ),
    (
        ProgramHeader {
            p_type: "PT_LOAD",
            p_flags: 0x6,
            p_offset: 0xd000,
            p_vaddr: 0x7f6e38e86000,
            p_paddr: 0x0,
            p_filesz: 0x2000,
            p_memsz: 0x2000,
            p_align: 4096,
        },
        ProcessMemory,
    ),
    (
        ProgramHeader {
            p_type: "PT_LOAD",
            p_flags: 0x6,
            p_offset: 0xf000,
            p_vaddr: 0x7f6e38e88000,
            p_paddr: 0x0,
            p_filesz: 0xd000,
            p_memsz: 0xd000,
            p_align: 4096,
        },
        ProcessMemory,
    ),
    (
        ProgramHeader {
            p_type: "PT_LOAD",
            p_flags: 0x4,
            p_offset: 0x1c000,
            p_vaddr: 0x7f6e38e99000,
            p_paddr: 0x0,
            p_filesz: 0x1000,
            p_memsz: 0x10000,
            p_align: 4096,
        },
        ProcessMemory,
    ),
    (
        ProgramHeader {
            p_type: "PT_LOAD",
            p_flags: 0x5,
            p_offset: 0x1d000,
            p_vaddr: 0x7f6e38ea9000,
            p_paddr: 0x0,
            p_filesz: 0x0,
            p_memsz: 0x73000,
            p_align: 4096,
        },
        ProcessMemory,
    ),
    (
        ProgramHeader {
            p_type: "PT_LOAD",
            p_flags: 0x4,
            p_offset: 0x1d000,
            p_vaddr: 0x7f6e38f1c000,
            p_paddr: 0x0,
            p_filesz: 0x0,
            p_memsz: 0x5a000,
            p_align: 4096,
        },
        ProcessMemory,
    ),
    (
        ProgramHeader {
            p_type: "PT_LOAD",
            p_flags: 0x4,
            p_offset: 0x1d000,
            p_vaddr: 0x7f6e38f76000,
            p_paddr: 0x0,
            p_filesz: 0x1000,
            p_memsz: 0x1000,
            p_align: 4096,
        },
        ProcessMemory,
    ),
    (
        ProgramHeader {
            p_type: "PT_LOAD",
            p_flags: 0x6,
            p_offset: 0x1e000,
            p_vaddr: 0x7f6e38f77000,
            p_paddr: 0x0,
            p_filesz: 0x1000,
            p_memsz: 0x1000,
            p_align: 4096,
        },
        ProcessMemory,
    ),
    (
        ProgramHeader {
            p_type: "PT_LOAD",
            p_flags: 0x6,
            p_offset: 0x1f000,
            p_vaddr: 0x7f6e38f78000,
            p_paddr: 0x0,
            p_filesz: 0x2000,
            p_memsz: 0x2000,
            p_align: 4096,
        },
        ProcessMemory,
    ),
    (
        ProgramHeader {
            p_type: "PT_LOAD",
            p_flags: 0x4,
            p_offset: 0x21000,
            p_vaddr: 0x7f6e38f7a000,
            p_paddr: 0x0,
            p_filesz: 0x1000,
            p_memsz: 0x1000,
            p_align: 4096,
        },
        ProcessMemory,
    ),
    (
        ProgramHeader {
            p_type: "PT_LOAD",
            p_flags: 0x5,
            p_offset: 0x22000,
            p_vaddr: 0x7f6e38f7b000,
            p_paddr: 0x0,
            p_filesz: 0x0,
            p_memsz: 0x25000,
            p_align: 4096,
        },
        ProcessMemory,
    ),
    (
        ProgramHeader {
            p_type: "PT_LOAD",
            p_flags: 0x4,
            p_offset: 0x22000,
            p_vaddr: 0x7f6e38fa0000,
            p_paddr: 0x0,
            p_filesz: 0x0,
            p_memsz: 0xa000,
            p_align: 4096,
        },
        ProcessMemory,
    ),
    (
        ProgramHeader {
            p_type: "PT_LOAD",
            p_flags: 0x4,
            p_offset: 0x22000,
            p_vaddr: 0x7f6e38faa000,
            p_paddr: 0x0,
            p_filesz: 0x2000,
            p_memsz: 0x2000,
            p_align: 4096,
        },
        ProcessMemory,
    ),
    (
        ProgramHeader {
            p_type: "PT_LOAD",
            p_flags: 0x6,
            p_offset: 0x24000,
            p_vaddr: 0x7f6e38fac000,
            p_paddr: 0x0,
            p_filesz: 0x2000,
            p_memsz: 0x2000,
            p_align: 4096,
        },
        ProcessMemory,
    ),
    (
        ProgramHeader {
            p_type: "PT_LOAD",
            p_flags: 0x6,
            p_offset: 0x26000,
            p_vaddr: 0x7ffe4ba5b000,
            p_paddr: 0x0,
            p_filesz: 0x21000,
            p_memsz: 0x21000,
            p_align: 4096,
        },
        ProcessMemory,
    ),
    (
        ProgramHeader {
            p_type: "PT_LOAD",
            p_flags: 0x4,
            p_offset: 0x47000,
            p_vaddr: 0x7ffe4bb1b000,
            p_paddr: 0x0,
            p_filesz: 0x4000,
            p_memsz: 0x4000,
            p_align: 4096,
        },
        ProcessMemory,
    ),
    (
        ProgramHeader {
            p_type: "PT_LOAD",
            p_flags: 0x5,
            p_offset: 0x4b000,
            p_vaddr: 0x7ffe4bb1f000,
            p_paddr: 0x0,
            p_filesz: 0x2000,
            p_memsz: 0x2000,
            p_align: 4096,
        },
        ProcessMemory,
    ),
    (
        ProgramHeader {
            p_type: "PT_LOAD",
            p_flags: 0x1,
            p_offset: 0x4d000,
            p_vaddr: 0xffffffffff600000,
            p_paddr: 0x0,
            p_filesz: 0x1000,
            p_memsz: 0x1000,
            p_align: 4096,
        },
        ProcessMemory,
    ),
    (
        ProgramHeader {
            p_type: "PT_NOTE",
            p_flags: 0x0,
            p_offset: 0x0,
            p_vaddr: 0x0,
            p_paddr: 0x0,
            p_filesz: 0xbc,
            p_memsz: 0x0,
            p_align: 0,
        },
        Buffer(
            [],
        ),
    ),
]
